Name:           haskell-zipper
Version:        0.2
License:        BSD3
License-file:   LICENSE
Author:         Krasimir Angelov, Iavor S. Diatchki
Maintainer:     iavor.diatchki@gmail.com
Category:       Data Structures
Synopsis:       A Haskell datastructure for working with locations in
                trees or forests.
Build-Depends:  base < 5, containers
Build-type:     Simple
Extra-source-files: LICENSE, tests.hs
Exposed-modules: Data.Tree.Zipper
GHC-options:    -O2 -Wall

